Add Railway deployment with Tailscale access to hab:11434
- Add Dockerfile.railway with Tailscale integration
- Add proxy_server_config.railway.yaml for Ollama on hab
- Update railway.toml to use new config
- Add comprehensive deployment documentation
- Restrict Tailscale access to only hab:11434 via ACL tags

--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "Dockerfile"
+dockerfilePath = "Dockerfile.railway"
 
 [deploy]
-startCommand = "--port 4000"
+startCommand = "--config proxy_server_config.railway.yaml --port 4000"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 
