--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -104,4 +104,4 @@ RUN echo '#!/bin/sh' > /app/start_with_tailscale.sh && \
 ENTRYPOINT ["/app/start_with_tailscale.sh"]
 
 # Append "--detailed_debug" to the end of CMD to view detailed debug logs
-CMD ["--port", "4000"]
+CMD ["--config", "proxy_server_config.railway.yaml", "--port", "4000"]
