--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -12,7 +12,8 @@ WORKDIR /app
 USER root
 
 # Install build dependencies
-RUN apk add --no-cache gcc python3-dev openssl openssl-dev
+# Note: python:latest-dev already includes Python dev headers, so we only need gcc and openssl
+RUN apk add --no-cache gcc openssl openssl-dev
 
 
 RUN pip install --upgrade pip && \
