Make Tailscale startup non-blocking with timeout

--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -116,8 +116,8 @@ RUN unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy && \
 COPY docker/supervisord.conf /etc/supervisord.conf
 
 # Create Tailscale startup script with subnet routing support
+# Note: No set -e so Tailscale failures don't prevent LiteLLM from starting
 RUN echo '#!/bin/sh' > /app/start_with_tailscale.sh && \
-    echo 'set -e' >> /app/start_with_tailscale.sh && \
     echo 'echo "Starting Tailscale daemon..."' >> /app/start_with_tailscale.sh && \
     echo 'tailscaled --tun=userspace-networking --socks5-server=localhost:1055 &' >> /app/start_with_tailscale.sh && \
     echo 'sleep 3' >> /app/start_with_tailscale.sh && \
@@ -126,13 +126,13 @@ RUN echo '#!/bin/sh' > /app/start_with_tailscale.sh && \
     echo '  TAILSCALE_ACCEPT_ROUTES="${TAILSCALE_ACCEPT_ROUTES:-true}"' >> /app/start_with_tailscale.sh && \
     echo '  if [ -n "$TAILSCALE_ROUTES" ]; then' >> /app/start_with_tailscale.sh && \
     echo '    echo "Connecting to Tailscale with subnet routes: $TAILSCALE_ROUTES"' >> /app/start_with_tailscale.sh && \
-    echo '    tailscale up --authkey=$TAILSCALE_AUTH_KEY --hostname=railway-litellm --advertise-routes=$TAILSCALE_ROUTES --accept-routes=$TAILSCALE_ACCEPT_ROUTES --accept-dns=false' >> /app/start_with_tailscale.sh && \
+    echo '    tailscale up --authkey=$TAILSCALE_AUTH_KEY --hostname=railway-litellm --advertise-routes=$TAILSCALE_ROUTES --accept-routes=$TAILSCALE_ACCEPT_ROUTES --accept-dns=false --timeout=30s || echo "Tailscale connection failed, continuing anyway"' >> /app/start_with_tailscale.sh && \
     echo '  else' >> /app/start_with_tailscale.sh && \
     echo '    echo "Connecting to Tailscale (no subnet routing)"' >> /app/start_with_tailscale.sh && \
-    echo '    tailscale up --authkey=$TAILSCALE_AUTH_KEY --hostname=railway-litellm --accept-routes=$TAILSCALE_ACCEPT_ROUTES --accept-dns=false' >> /app/start_with_tailscale.sh && \
+    echo '    tailscale up --authkey=$TAILSCALE_AUTH_KEY --hostname=railway-litellm --accept-routes=$TAILSCALE_ACCEPT_ROUTES --accept-dns=false --timeout=30s || echo "Tailscale connection failed, continuing anyway"' >> /app/start_with_tailscale.sh && \
     echo '  fi' >> /app/start_with_tailscale.sh && \
-    echo '  echo "Tailscale connected successfully!"' >> /app/start_with_tailscale.sh && \
-    echo '  tailscale status' >> /app/start_with_tailscale.sh && \
+    echo '  echo "Tailscale status:"' >> /app/start_with_tailscale.sh && \
+    echo '  tailscale status || true' >> /app/start_with_tailscale.sh && \
     echo 'else' >> /app/start_with_tailscale.sh && \
     echo '  echo "WARNING: TAILSCALE_AUTH_KEY not set, skipping Tailscale connection"' >> /app/start_with_tailscale.sh && \
     echo 'fi' >> /app/start_with_tailscale.sh && \
