--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -117,7 +117,10 @@ COPY docker/supervisord.conf /etc/supervisord.conf
 
 # Create Tailscale startup script with subnet routing support
 # Note: No set -e so Tailscale failures don't prevent LiteLLM from starting
+# CRITICAL: Unset proxy vars at very start - Railway injects these at runtime
 RUN echo '#!/bin/sh' > /app/start_with_tailscale.sh && \
+    echo '# Unset Railway proxy vars immediately - they break Python HTTP clients' >> /app/start_with_tailscale.sh && \
+    echo 'unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy' >> /app/start_with_tailscale.sh && \
     echo 'echo "Starting Tailscale daemon..."' >> /app/start_with_tailscale.sh && \
     echo 'tailscaled --tun=userspace-networking --socks5-server=localhost:1055 &' >> /app/start_with_tailscale.sh && \
     echo 'sleep 3' >> /app/start_with_tailscale.sh && \
@@ -137,8 +140,6 @@ RUN echo '#!/bin/sh' > /app/start_with_tailscale.sh && \
     echo '  echo "WARNING: TAILSCALE_AUTH_KEY not set, skipping Tailscale connection"' >> /app/start_with_tailscale.sh && \
     echo 'fi' >> /app/start_with_tailscale.sh && \
     echo 'echo "Starting LiteLLM proxy..."' >> /app/start_with_tailscale.sh && \
-    echo '# Unset Railway proxy vars that break Python HTTP clients' >> /app/start_with_tailscale.sh && \
-    echo 'unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy' >> /app/start_with_tailscale.sh && \
     echo 'exec docker/prod_entrypoint.sh "$@"' >> /app/start_with_tailscale.sh && \
     chmod +x /app/start_with_tailscale.sh
 
