--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -169,6 +169,10 @@ RUN echo '#!/bin/sh' > /app/start_with_tailscale.sh && \
     echo '  fi' >> /app/start_with_tailscale.sh && \
     echo '  echo "Tailscale status:"' >> /app/start_with_tailscale.sh && \
     echo '  tailscale status || true' >> /app/start_with_tailscale.sh && \
+    echo '  # Set proxy to use Tailscale SOCKS5 for reaching Tailscale nodes' >> /app/start_with_tailscale.sh && \
+    echo '  export ALL_PROXY=socks5://localhost:1055' >> /app/start_with_tailscale.sh && \
+    echo '  export all_proxy=socks5://localhost:1055' >> /app/start_with_tailscale.sh && \
+    echo '  echo "Tailscale SOCKS proxy enabled at localhost:1055"' >> /app/start_with_tailscale.sh && \
     echo 'else' >> /app/start_with_tailscale.sh && \
     echo '  echo "WARNING: TAILSCALE_AUTH_KEY not set, skipping Tailscale connection"' >> /app/start_with_tailscale.sh && \
     echo 'fi' >> /app/start_with_tailscale.sh && \
