--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # LITELLM PROXY DEPENDENCIES #
 anyio==4.8.0 # openai + http req.
-httpx==0.28.1
+httpx[socks]==0.28.1
+socksio==1.0.0
 openai==2.8.0  # openai req.
 fastapi==0.120.1 # server dep
 starlette==0.49.1 # starlette fastapi dep
