--- a/proxy_server_config.railway.yaml
+++ b/proxy_server_config.railway.yaml
@@ -1,23 +1,23 @@
 model_list:
-  # Ollama models via hugo (Cloudflare Tunnel)
+  # Ollama models via hugo (Tailscale + proxychains4)
   - model_name: llama3
     litellm_params:
       model: ollama/llama3
-      api_base: https://public-processing-face-trainers.trycloudflare.com
+      api_base: http://100.104.46.119:11434  # hugo via Tailscale
     model_info:
       id: "hugo-llama3"
 
   - model_name: llama2
     litellm_params:
       model: ollama/llama2
-      api_base: https://public-processing-face-trainers.trycloudflare.com
+      api_base: http://100.104.46.119:11434  # hugo via Tailscale
     model_info:
       id: "hugo-llama2"
 
   - model_name: mistral
     litellm_params:
       model: ollama/mistral
-      api_base: https://public-processing-face-trainers.trycloudflare.com
+      api_base: http://100.104.46.119:11434  # hugo via Tailscale
     model_info:
       id: "hugo-mistral"
 
@@ -25,7 +25,7 @@ model_list:
   - model_name: "ollama/*"
     litellm_params:
       model: "ollama/*"
-      api_base: https://public-processing-face-trainers.trycloudflare.com
+      api_base: http://100.104.46.119:11434  # hugo via Tailscale
 
 litellm_settings:
   drop_params: True
