--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -72,6 +72,9 @@ COPY --from=builder /wheels/ /wheels/
 # Install the built wheel using pip; again using a wildcard if it's the only file
 RUN pip install *.whl /wheels/* --no-index --find-links=/wheels/ && rm -f *.whl && rm -rf /wheels
 
+# Install aiohttp-socks for SOCKS5 proxy support (needed for Tailscale userspace networking)
+RUN pip install aiohttp-socks python-socks
+
 # Install semantic_router and aurelio-sdk using script
 RUN chmod +x docker/install_auto_router.sh && ./docker/install_auto_router.sh
 
@@ -89,7 +92,7 @@ COPY docker/supervisord.conf /etc/supervisord.conf
 RUN echo '#!/bin/sh' > /app/start_with_tailscale.sh && \
     echo 'set -e' >> /app/start_with_tailscale.sh && \
     echo 'echo "Starting Tailscale daemon..."' >> /app/start_with_tailscale.sh && \
-    echo 'tailscaled --tun=userspace-networking --socks5-server=localhost:1055 &' >> /app/start_with_tailscale.sh && \
+    echo 'tailscaled --tun=userspace-networking --socks5-server=localhost:1055 --outbound-http-proxy-listen=localhost:1080 &' >> /app/start_with_tailscale.sh && \
     echo 'sleep 3' >> /app/start_with_tailscale.sh && \
     echo 'if [ -n "$TAILSCALE_AUTH_KEY" ]; then' >> /app/start_with_tailscale.sh && \
     echo '  TAILSCALE_ROUTES="${TAILSCALE_ADVERTISE_ROUTES:-}"' >> /app/start_with_tailscale.sh && \
@@ -107,6 +110,9 @@ RUN echo '#!/bin/sh' > /app/start_with_tailscale.sh && \
     echo '  echo "WARNING: TAILSCALE_AUTH_KEY not set, skipping Tailscale connection"' >> /app/start_with_tailscale.sh && \
     echo 'fi' >> /app/start_with_tailscale.sh && \
     echo 'echo "Starting LiteLLM proxy..."' >> /app/start_with_tailscale.sh && \
+    echo 'export HTTP_PROXY=http://localhost:1080' >> /app/start_with_tailscale.sh && \
+    echo 'export HTTPS_PROXY=http://localhost:1080' >> /app/start_with_tailscale.sh && \
+    echo 'export ALL_PROXY=socks5://localhost:1055' >> /app/start_with_tailscale.sh && \
     echo 'exec docker/prod_entrypoint.sh "$@"' >> /app/start_with_tailscale.sh && \
     chmod +x /app/start_with_tailscale.sh
 
