--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -15,7 +15,9 @@ USER root
 RUN apk add --no-cache gcc openssl openssl-dev
 
 
-RUN pip install --upgrade pip && \
+# Unset proxy vars during build (Railway sets SOCKS proxy which pip can't use)
+RUN unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy && \
+    pip install --upgrade pip && \
     pip install build
 
 # Copy the current directory contents into the container at /app
@@ -30,16 +32,19 @@ RUN rm -rf dist/* && python -m build
 # There should be only one wheel file now, assume the build only creates one
 RUN ls -1 dist/*.whl | head -1
 
-# Install the package
-RUN pip install dist/*.whl
+# Install the package (unset proxy vars - Railway sets SOCKS proxy)
+RUN unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy && \
+    pip install dist/*.whl
 
 # install dependencies as wheels
-RUN pip wheel --no-cache-dir --wheel-dir=/wheels/ -r requirements.txt
+RUN unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy && \
+    pip wheel --no-cache-dir --wheel-dir=/wheels/ -r requirements.txt
 
 # ensure pyjwt is used, not jwt
-RUN pip uninstall jwt -y
-RUN pip uninstall PyJWT -y
-RUN pip install PyJWT==2.9.0 --no-cache-dir
+RUN pip uninstall jwt -y || true
+RUN pip uninstall PyJWT -y || true
+RUN unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy && \
+    pip install PyJWT==2.9.0 --no-cache-dir
 
 # Build Admin UI
 RUN chmod +x docker/build_admin_ui.sh && ./docker/build_admin_ui.sh
@@ -54,7 +59,8 @@ USER root
 RUN apk add --no-cache openssl tzdata curl iptables iproute2 ca-certificates wget
 
 # Install Tailscale static binary (compatible with Wolfi Linux)
-RUN wget https://pkgs.tailscale.com/stable/tailscale_1.56.1_amd64.tgz && \
+RUN unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy && \
+    wget https://pkgs.tailscale.com/stable/tailscale_1.56.1_amd64.tgz && \
     tar xzf tailscale_1.56.1_amd64.tgz && \
     mv tailscale_1.56.1_amd64/tailscale /usr/bin/ && \
     mv tailscale_1.56.1_amd64/tailscaled /usr/sbin/ && \
@@ -70,10 +76,12 @@ COPY --from=builder /app/dist/*.whl .
 COPY --from=builder /wheels/ /wheels/
 
 # Install the built wheel using pip; again using a wildcard if it's the only file
-RUN pip install *.whl /wheels/* --no-index --find-links=/wheels/ && rm -f *.whl && rm -rf /wheels
+RUN unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy && \
+    pip install *.whl /wheels/* --no-index --find-links=/wheels/ && rm -f *.whl && rm -rf /wheels
 
 # Install aiohttp-socks for SOCKS5 proxy support (needed for Tailscale userspace networking)
-RUN pip install aiohttp-socks python-socks
+RUN unset HTTP_PROXY HTTPS_PROXY ALL_PROXY http_proxy https_proxy all_proxy && \
+    pip install aiohttp-socks python-socks
 
 # Install semantic_router and aurelio-sdk using script
 RUN chmod +x docker/install_auto_router.sh && ./docker/install_auto_router.sh
